--- a/config/homo_export_labels_src.yaml
+++ b/config/homo_export_labels_src.yaml
@@ -1,7 +1,7 @@
 data:
     name: 'coco'
-    resize: [608, 608]     #[240,320]
-    src_image_path: './data/coco/images/test2017/'
+    resize: [240,320]     #[240,320]
+    src_image_path: './data/coco/test2017/'
     dst_label_path: './data/mg_coco_coco_3e-2/labels/test2017/'
     dst_image_path: './data/mg_coco_coco_3e-2/images/test2017/'
     homography_adaptation:
@@ -22,12 +22,12 @@ data:
             max_angle: 1.57
 model:
     name: 'magicpoint'
-    using_bn: true
+    bb_name: "VGGBackboneBN"
     grid_size: 8
     det_thresh: 0.015 #0.015
     nms: 4
     topk: 0
-    pretrained_model: './export_efficientv2/mg_syn_0004_0.179.pth'
+    pretrained_model: './export_simple_nms/mg_syn_19_1051_0.102.pth'
     backbone:
         backbone_type: 'VGG'
         vgg:
