--- a/config/homo_export_labels_v1_train.yaml
+++ b/config/homo_export_labels_v1_train.yaml
@@ -1,9 +1,9 @@
 data:
     name: 'coco'
-    resize: [608, 608]     #[240,320]
-    src_image_path: './data/coco/images/test2017/'
-    dst_label_path: './data/mg_coco_coco_3e-2/labels/test2017/'
-    dst_image_path: './data/mg_coco_coco_3e-2/images/test2017/'
+    resize: [240,320]
+    src_image_path: './data/coco/train2017/'
+    dst_label_path: './data/mg_coco_coco_3e-3/labels/train2017/'
+    dst_image_path: './data/mg_coco_coco_3e-3/images/train2017/'
     homography_adaptation:
         num: 100
         aggregation: 'sum'
@@ -22,15 +22,11 @@ data:
             max_angle: 1.57
 model:
     name: 'magicpoint'
-    using_bn: true
+    bb_name: "EfficientBBV2"       # "VGGBackboneBN", "VGGBackbone", "EfficientBB"
     grid_size: 8
     det_thresh: 0.015 #0.015
     nms: 4
     topk: 0
-    pretrained_model: './export_efficientv2/mg_syn_0004_0.179.pth'
-    backbone:
-        backbone_type: 'VGG'
-        vgg:
-            channels: [64,64,64,64,128,128,128,128]
+    pretrained_model: './export_coco_v1/mg_coco_0030_0.461.pth'
     det_head: #detector head
         feat_in_dim: 128
