--- a/config/homo_export_labels_v4.yaml
+++ b/config/homo_export_labels_v4.yaml
@@ -1,9 +1,10 @@
 data:
     name: 'coco'
-    resize: [608, 608]     #[240,320]
-    src_image_path: '/data/zebin/data/coco/train2017/'
-    dst_label_path: '/data/zebin/data/mg_coco_efb0/train2017/'
-    dst_image_path: '/data/zebin/data/mg_coco_efb0/train2017/'
+    resize: [240,320]
+    src_image_path: '/data/zebin/data/coco/test2017'
+    dst_label_path: '/data/zebin/data/mg_coco_v2s_1/labels/test2017/'
+    dst_image_path: '/data/zebin/data/mg_coco_v2s_1/images/test2017/'
+    dst_color_path: '/data/zebin/data/mg_coco_v2s_1/images/test2017_color/'
     homography_adaptation:
         num: 100
         aggregation: 'sum'
@@ -22,15 +23,11 @@ data:
             max_angle: 1.57
 model:
     name: 'magicpoint'
-    using_bn: true
+    bb_name: "EfficientBBV2"       # "VGGBackboneBN", "VGGBackbone", "EfficientBB"
     grid_size: 8
     det_thresh: 0.015 #0.015
     nms: 4
     topk: 0
-    pretrained_model: './export_efficientv2/mg_syn_0004_0.179.pth'
-    backbone:
-        backbone_type: 'VGG'
-        vgg:
-            channels: [64,64,64,64,128,128,128,128]
+    pretrained_model: '/data/zebin/lfnet/SuperPoint-Pytorch/export_efficientv2s_3/mg_syn_0198_0.076.pth'
     det_head: #detector head
         feat_in_dim: 128
