--- a/config/magic_point_syn_train_v2.yaml
+++ b/config/magic_point_syn_train_v2.yaml
@@ -54,10 +54,12 @@ model:
     topk: -1
 solver:
     grid_size: 8
-    epoch: 80
+    epoch: 40
     base_lr: 0.001
-    train_batch_size: 64
-    test_batch_size: 64
-    save_dir: './export_efficientv2s_2'
+    train_batch_size: 320
+    test_batch_size: 320
+    save_dir: './export_efficientv2s_3'
     model_name: 'mg_syn'
-
+    device: "cuda:2"
+    weight_decay: 0.0001
+    
